Feature/last fixes (#7)

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -1,14 +1,11 @@
-#timer,
 #result,
-#test-button,
 #limit-select {
     display: block;
     margin-top: 1em;
     margin-bottom: 1em;
 }
 
-#limit-select,
-#test-button {
+#limit-select {
     margin-left: auto;
     margin-right: auto;
 }
